# jaxga

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  jaxga.flaxmodules.html  jaxga.html  jaxga.ops.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: build-test-publish.yml
_modules/: index.html
_modules/jaxga/: jaxga.html  mv.html  signatures.html
_modules/jaxga/ops/: add.html  dual.html  inverse.html  keepnonzero.html  multiply.html  reduce_same.html  sandwich.html  select.html  simple_exp.html
_sources/: index.rst.txt  jaxga.flaxmodules.rst.txt  jaxga.ops.rst.txt  jaxga.rst.txt
benchmarks/: test_clifford.py  test_jaxga.py  test_tfga.py
src/jaxga/: jaxga.py  mv.py  signatures.py
src/jaxga/flaxmodules/: mvproddense.py
src/jaxga/ops/: add.py  dual.py  inverse.py  keepnonzero.py  multiply.py  reduce_same.py  sandwich.py  select.py  simple_exp.py
tests/: test_mv_dual.py  test_mv_multiply.py
