[metadata]
name = jaxga
version = 0.0.2
author = Robin Kahlow
author_email = tora@warlock.ai
description = Geometric Algebra package for Jax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RobinKa/jaxga
project_urls =
    Bug Tracker = https://github.com/RobinKa/jaxga/issues
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    
    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research

    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src